--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria </title>
     <link rel="stylesheet" href="Style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.
-    com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
     
     <nav>
         <ul>
             <li>
-                <a href="#">
-                    <img src="img/db214df819b4b87cec954949d94a0fc3-lindo-icono-de-pastel-de-autoestima.png" alt="">
+                <a href="#" class="logo">
+                    <img class="logo img" src="img/db214df819b4b87cec954949d94a0fc3-lindo-icono-de-pastel-de-autoestima.png" alt="">
                     <span class="nav-item">Pasteleria</span>
                 </a>
             </li>
