--- a/Menu.html
+++ b/Menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria </title>
+    <title>Menú</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
@@ -44,6 +44,8 @@
             </a></li>
         </ul>
     </nav>
+
+    <center><h1>MENÚ</h1></center>
 
     .
 
