--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria </title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./css/Style.css">
+    <link rel="stylesheet" href="./css/PagPrincipal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
-    
+    <! -- Menu Principal --!>
     <nav>
         <ul>
             <li>
@@ -44,9 +45,18 @@
             </a></li>
         </ul>
     </nav>
+    <! -- Cuerpo de pagina principal --!>
+    <div class="TopBar">
+        
+    </div>
+    <div class="BodyContent">
 
-    .
+    </div>
+    <div class="Footer">
+        <footer>
 
+        </footer>
+    </div>
 
 </body>
 </html>
