--- a/PastelDelDía.html
+++ b/PastelDelDía.html
@@ -20,7 +20,7 @@
             </li>
             <br>
             <br>
-            <li><a href="#">
+            <li><a href="index.html">
             <i class="fas fa-home"></i>
             <span class="nav-item">Inicio</span>
             </a></li>
@@ -47,6 +47,23 @@
     </nav>
     <! -- Cuerpo de pagina principal --!>
     <div class="TopBar">
+
+        <center>
+        <h1>Pastel del día </h1>
+    <br><br>
+
+    <h4>En este apartado encontrarás el pastel del día que te ofrecemos, puede guardar el pastel si es de tu agrado.</h4>
+    <br><br>
+
+    <div class="card" style="width: 18rem;">
+        <img src="img/pastelChocolate.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Pastel de chocolate</h5>
+          <p class="card-text">El pastel del día trata de un delicioso pastel de chocolate con textura humeda y con chocolate en su interior a solo 12.00$</p>
+          <a href="#" class="btn btn-primary">Guardar Pastel</a>
+        </div>
+      </div>
+    </center>
         
     </div>
     <div class="BodyContent">
@@ -57,6 +74,9 @@
 
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
