agregue carrousele a la pagina principal, las tarjetas, un poco de diseño 2

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" class="logo">
+                    <div href="#" class="logo">
                         <img class="logo img"
                             src="img/WhatsApp Image 2024-03-08 at 2.19.20 PM.jpeg">
                         <span class="nav-item">Pasteleria Vilma</span>
-                    </a>
+                    </div>
                 </li>
                 <br>
                 <br>
