--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -48,7 +48,11 @@
     <br>
     <br>
     <br>
-     <center><p><strong> La información de este apartado se proporcionará próximamente</strong></p></center>
+     <center><p><strong> Misiòn </strong></p></center>
+     <center><p><strong> Nuestro trabajo  es cumplir con la expectativa de tu paladar 
+                         Con nuestros nuevos sabores ¡Trabajamos para hacer realidad los 
+                         sueños de tu paladar  </strong></p></center>
+
 
 </body>
 </html>
