--- a/PastelDelDía.html
+++ b/PastelDelDía.html
@@ -39,7 +39,7 @@
             </a></li>
             <br>
             <br>
-            <li><a href="#">
+            <li><a href="sobre nosotros.html">
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Sobre Nosotros</span>
             </a></li>
