--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre nosotros</title>
-    <link rel="stylesheet" href="Style.css">
+    <title>Pasteleria </title>
+    <link rel="stylesheet" href="./css/Style.css">
+    <link rel="stylesheet" href="./css/PagPrincipal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
@@ -25,19 +26,19 @@
 
             <br>
             <br>
-            <li><a href="#">
+            <li><a href="index.html">
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Menu</span>
             </a></li>
             <br>
             <br>
-            <li><a href="#">
+            <li><a href="PastelDelDía.html">
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Pastel del dia</span>
             </a></li>
             <br>
             <br>
-            <li><a href="index.html">
+            <li><a href="sobre nosotros.html">
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Sobre Nosotros</span>
             </a></li>
