--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -1,59 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria </title>
     <link rel="stylesheet" href="./css/Style.css">
     <link rel="stylesheet" href="./css/PagPrincipal.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <nav>
         <ul>
             <li>
                 <a href="#" class="logo">
-                    <img class="logo img" src="img/db214df819b4b87cec954949d94a0fc3-lindo-icono-de-pastel-de-autoestima.png" alt="">
+                    <img class="logo img"
+                        src="img/db214df819b4b87cec954949d94a0fc3-lindo-icono-de-pastel-de-autoestima.png" alt="">
                     <span class="nav-item">Pasteleria</span>
                 </a>
             </li>
             <br>
             <br>
             <li><a href="index.html">
-            <i class="fas fa-home"></i>
-            <span class="nav-item">Inicio</span>
-            </a></li>
+                    <i class="fas fa-home"></i>
+                    <span class="nav-item">Inicio</span>
+                </a></li>
 
             <br>
             <br>
             <li><a href="index.html">
-                <i class="fas fa-home"></i>
-                <span class="nav-item">Menu</span>
-            </a></li>
+                    <i class="fas fa-home"></i>
+                    <span class="nav-item">Menu</span>
+                </a></li>
             <br>
             <br>
             <li><a href="PastelDelDía.html">
-                <i class="fas fa-home"></i>
-                <span class="nav-item">Pastel del dia</span>
-            </a></li>
+                    <i class="fas fa-home"></i>
+                    <span class="nav-item">Pastel del dia</span>
+                </a></li>
             <br>
             <br>
             <li><a href="sobre nosotros.html">
-                <i class="fas fa-home"></i>
-                <span class="nav-item">Sobre Nosotros</span>
-            </a></li>
+                    <i class="fas fa-home"></i>
+                    <span class="nav-item">Sobre Nosotros</span>
+                </a></li>
         </ul>
     </nav>
-       
+
+
+    <br>
+    <br>
+    <br>
+
+
+
+    <center>
+        <p><strong> Pasteleria Vilma  </strong></p>
+    </center>
+    <center>
+        <p><strong> Conoce mas sobre nosotros!  </strong></p>
+    </center>
+
+    <br><br>
+
+    <center>
+    <div class="Card" style="width: 18rem;">
+        <img src="img/18-MAYO-BRAHMAN-I.jpg"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <h3>Misión</h3>
+            <p class="card-text">Nuestro trabajo es cumplir con la expectativa de tu paladar
+                Con nuestros nuevos sabores ¡Trabajamos para hacer realidad los
+                sueños de tu paladar</p>
+        </div>
+    </div>
+</center>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
-    <br>
-    <br>
-    <br>
-     <center><p><strong> Misiòn </strong></p></center>
-     <center><p><strong> Nuestro trabajo  es cumplir con la expectativa de tu paladar 
-                         Con nuestros nuevos sabores ¡Trabajamos para hacer realidad los 
-                         sueños de tu paladar  </strong></p></center>
+    <br><br>
+
+    <center>
+    <div class="Ruth" style="width: 18rem;">
+        <img src="img/iStock_70334397_SMALL-805x594.jpg"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <h3>Visión</h3>
+            <p class="card-text">Queremos que te deleites con una alta variedad de pasteles 
+                                  y otras delicias horneadas .
+            </p>
+        </div>
+    </div>
+</center>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
+
+
+
 
 
 </body>
+
 </html>
