--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
             rel="stylesheet">
             <script src=" https://unpkg.com/sweetalert/dist/sweetalert.min.js "></script>
             <link rel="stylesheet" href="js/PagPrincipal.js">
-        <style>
-        
-
-        
-    </style>
     </head>
     <body>
         <!-- Menu Principal -->
@@ -39,7 +34,7 @@
 
                 <br>
                 <br>
-                <li><a href="#">
+                <li><a href="Menu.html">
                         <i class="fas fa-home"></i>
                         <span class="nav-item">Menu</span>
                     </a></li>
