--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </a></li>
                 <br>
                 <br>
-                <li><a href="#">
+                <li><a href="sobre nosotros.html">
                         <i class="fas fa-home"></i>
                         <span class="nav-item">Sobre Nosotros</span>
                     </a></li>
