--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -98,6 +98,31 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    
+  <br><br>
+    <center>
+        <div class="Marvm xd" style="width: 18rem;">
+            <img src="img/chef-pastelero-1-1024x576.jpg"
+            class="card-img-top" alt="...">
+        <div class="card-body">
+            <div class="card-body">
+                <h3>Nuestra Historia </h3>
+                <p class="card-text">En 1994 Empezamos como un proyecto de panaderia teniamos ingresos grandes pero 
+                    el duseño Bryan Miranda tenia una vision mas grande queria mas que una panaderia y decidio colocar 
+                    su primera pasteleria la cual su nombre es Vilma y empezo a hacer pasteles de todo tipo y asi fue como Vilma 
+                    llego al exito
+                </p>
+            </div>
+        </div>
+    </center>
+    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
+
+
+   
+
 
 
 
