--- a/sobre nosotros.html
+++ b/sobre nosotros.html
@@ -31,7 +31,7 @@
 
             <br>
             <br>
-            <li><a href="index.html">
+            <li><a href="Menu.html">
                     <i class="fas fa-home"></i>
                     <span class="nav-item">Menu</span>
                 </a></li>
