Edité las alertas de los botones

--- a/PastelDelDía.html
+++ b/PastelDelDía.html
@@ -53,7 +53,7 @@
         <center>
             <br>
         <h1>Pastel del día </h1>
-    <br><br>
+    <br><br><br>
 
     <h4>En este apartado encontrarás el pastel del día que te ofrecemos, puede guardar el pastel si es de tu agrado.</h4>
     <br><br>
@@ -76,7 +76,7 @@
 <script>
     function guardarPastel()
 {
-    swal ( "Excelente" , "Se ha guardado el pastel del día" , " éxito " )   ;
+    swal("Gracias!", "Has guardado el pastel del día", "success")
 }
 </script>
         
