--- a/index.html
+++ b/index.html
@@ -147,9 +147,11 @@
             <script>
                 function reservarPastel()
                 {
-                    swal("Good job!", "You clicked the button!", "success")
+                    swal("Gracias!", "Has reservado el pastel", "success")
                 }
                 </script>
+
+                
 
             <div class="Footer">
                 <footer>
