--- a/Menu.html
+++ b/Menu.html
@@ -143,7 +143,7 @@
 <script>
 function reservarPastel()
 {
-    swal("Good job!", "You clicked the button!", "success")
+  swal("Gracias!", "Has reservado el pastel", "success")
 }
 </script>
 
