--- a/PastelDelDía.html
+++ b/PastelDelDía.html
@@ -29,7 +29,7 @@
 
             <br>
             <br>
-            <li><a href="#">
+            <li><a href="Menu.html">
                 <i class="fas fa-home"></i>
                 <span class="nav-item">Menu</span>
             </a></li>
