--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                             <h3>Pastel de fresa</h3>
                             <p>Precio 10$</p>
-                            <a href="#">Comprar</a>
+                            <button onclick="reservarPastel();" type="button" class="btn btn-outline-success">Reservar</button>
                         </div>
                     </div>
                     <div class="card">
@@ -124,7 +124,7 @@
 
                             <h3>Pastel de Chocolate</h3>
                             <p>Precio 10$</p>
-                            <a href="#">Comprar</a>
+                            <button onclick="reservarPastel();" type="button" class="btn btn-outline-success">Reservar</button>
                         </div>
                     </div>
                     <div class="card">
@@ -135,7 +135,7 @@
 
                             <h3>Pastel de Vainilla</h3>
                             <p>Precio 10$</p>
-                            <a href="#">Comprar</a>
+                            <button onclick="reservarPastel();" type="button" class="btn btn-outline-success">Reservar</button>
                         </div>
                     </div>
                 </div>
